--- a/PROTOTYPING.ipynb
+++ b/PROTOTYPING.ipynb
@@ -15,6 +15,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RESOURCES LIST "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In progress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- NIST FRAMEWORK  [NIST](https://www.nist.gov/cyberframework) \n",
+    "- AWESOME-PENTEST  [PENTEST](https://github.com/enaqx/awesome-pentest)\n",
+    "- NMAP How to [NMAP](https://hackertarget.com/nmap-tutorial/)\n",
+    "- OWASP  [OWASP](https://www.owasp.org/index.php/Main_Page)\n",
+    "- Signature Wrapping [Here](https://www.ws-attacks.org/XML_Signature_Wrapping)\n",
+    "- Hack the Box [here](https://www.hackthebox.eu/)\n",
+    "- Hack the Box tutorial [here](https://0xrick.github.io/hack-the-box/teacher/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
