updating resource layout

--- a/PROTOTYPING.ipynb
+++ b/PROTOTYPING.ipynb
@@ -4,41 +4,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CYBER SECURITY COMPENDIUM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![TITLE IMAGE](head.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# RESOURCES LIST "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## In progress"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# CYBER SECURITY COMPENDIUM\n",
+    "\n",
+    "| Topic | Quick Jump |\n",
+    "| ------------- | ------------- |\n",
+    "| FRAMEWORKS   | [Frameworks](#FRAMEWORKS)  |\n",
+    "| CYBER TOOLS  | [Cyber](#CYBER-TOOLS)  |\n",
+    "| KT RESOURCES  | [Knowledge Resources](#KNOWLEDGE-RESOURCES)  |\n",
+    "\n",
+    "  \n",
+    "  \n",
+    "![TITLE IMAGE](head.jpg)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# FRAMEWORKS \n",
+    "\n",
+    "| Topic | Quick Jump |\n",
+    "| ------------- | ------------- |\n",
+    "| NIST FRAMEWORK   | [NIST](#NIST-FRAMEWORK)  |\n",
+    "| Open Web Application Security Project  | [OWASP](#Open-Web-Application-Security-Project-(OWASP))  |\n",
+    "\n",
+    "## NIST FRAMEWORK \n",
     "- NIST FRAMEWORK  [NIST](https://www.nist.gov/cyberframework) \n",
-    "- AWESOME-PENTEST  [PENTEST](https://github.com/enaqx/awesome-pentest)\n",
-    "- NMAP How to [NMAP](https://hackertarget.com/nmap-tutorial/)\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "## Open Web Application Security Project (OWASP) \n",
+    "\n",
     "- OWASP  [OWASP](https://www.owasp.org/index.php/Main_Page)\n",
-    "- Signature Wrapping [Here](https://www.ws-attacks.org/XML_Signature_Wrapping)\n",
+    "\n",
+    "  \n",
+    "\n",
+    "  \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "# CYBER TOOLS \n",
+    "\n",
+    "| Topic | Quick Jump |\n",
+    "| ------------- | ------------- |\n",
+    "| Hack the Box   | [HTB](#Hack-The-Box)  |\n",
+    "\n",
+    "\n",
+    "  \n",
+    "  \n",
+    "  ## Hack The Box\n",
     "- Hack the Box [here](https://www.hackthebox.eu/)\n",
-    "- Hack the Box tutorial [here](https://0xrick.github.io/hack-the-box/teacher/)"
+    "- Hack the Box tutorial [here](https://0xrick.github.io/hack-the-box/teacher/)\n",
+    "\n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "# KNOWLEDGE RESOURCES \n",
+    "  \n",
+    "| Topic | Quick Jump |\n",
+    "| ------------- | ------------- |\n",
+    "| Signature Wrapping  | [SW](#Signature-Wrapping-Attack)  |\n",
+    "| AWESOME PENTEST  | [AWESOME PENTEST](#AWESOME-PENTEST)  |\n",
+    "| How to NMAP   | [MAPPING PORTS](#Hack-The-Box)  |\n",
+    "\n",
+    "\n",
+    "## Signature Wrapping Attack\n",
+    "- Signature Wrapping [Here](https://www.ws-attacks.org/XML_Signature_Wrapping) \n",
+    "  \n",
+    "\n",
+    "## AWESOME PENTEST\n",
+    "    \n",
+    "- AWESOME-PENTEST  [PENTEST](https://github.com/enaqx/awesome-pentest)\n",
+    "\n",
+    "  \n",
+    "## How to NMAP\n",
+    "\n",
+    "  \n",
+    "- NMAP How to [NMAP](https://hackertarget.com/nmap-tutorial/)"
    ]
   },
   {
