--- a/PROTOTYPING.ipynb
+++ b/PROTOTYPING.ipynb
@@ -27,7 +27,7 @@
     "| NIST FRAMEWORK   | [NIST](#NIST-FRAMEWORK)  |\n",
     "| Open Web Application Security Project  | [OWASP](#Open-Web-Application-Security-Project-(OWASP))  |\n",
     "\n",
-    "## NIST FRAMEWORK \n",
+    "### NIST FRAMEWORK \n",
     "- NIST FRAMEWORK  [NIST](https://www.nist.gov/cyberframework) \n",
     "\n",
     "\n",
@@ -38,10 +38,10 @@
     "- OWASP  [OWASP](https://www.owasp.org/index.php/Main_Page)\n",
     "\n",
     "  \n",
-    "\n",
-    "  \n",
-    "    \n",
-    "    \n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
     "\n",
     "# CYBER TOOLS \n",
     "\n",
@@ -51,25 +51,32 @@
     "\n",
     "\n",
     "  \n",
-    "  \n",
-    "  ## Hack The Box\n",
+    "<br />\n",
+    "<br />\n",
+    "\n",
+    "## Hack The Box\n",
     "- Hack the Box [here](https://www.hackthebox.eu/)\n",
     "- Hack the Box tutorial [here](https://0xrick.github.io/hack-the-box/teacher/)\n",
     "\n",
     "  \n",
-    "  \n",
-    "  \n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
     "  \n",
     "# KNOWLEDGE RESOURCES \n",
     "  \n",
     "| Topic | Quick Jump |\n",
     "| ------------- | ------------- |\n",
-    "| Signature Wrapping  | [SW](#Signature-Wrapping-Attack)  |\n",
+    "| Signature Wrapping  | [SIGNATURE WRAPPING ATTACK](#SIGNATURE-WRAPPING-ATTACK)  |\n",
     "| AWESOME PENTEST  | [AWESOME PENTEST](#AWESOME-PENTEST)  |\n",
-    "| How to NMAP   | [MAPPING PORTS](#Hack-The-Box)  |\n",
+    "| How to NMAP   | [MAPPING PORTS](#HOW-TO-NMAP)  |\n",
+    "\n",
+    "<br />\n",
+    "<br />\n",
+    "<br />\n",
     "\n",
     "\n",
-    "## Signature Wrapping Attack\n",
+    "## SIGNATURE WRAPPING ATTACK\n",
     "- Signature Wrapping [Here](https://www.ws-attacks.org/XML_Signature_Wrapping) \n",
     "  \n",
     "\n",
@@ -78,7 +85,8 @@
     "- AWESOME-PENTEST  [PENTEST](https://github.com/enaqx/awesome-pentest)\n",
     "\n",
     "  \n",
-    "## How to NMAP\n",
+    "## HOW TO NMAP\n",
+    "  \n",
     "\n",
     "  \n",
     "- NMAP How to [NMAP](https://hackertarget.com/nmap-tutorial/)"
