--- a/PROTOTYPING.ipynb
+++ b/PROTOTYPING.ipynb
@@ -27,7 +27,7 @@
     "| NIST FRAMEWORK   | [NIST](#NIST-FRAMEWORK)  |\n",
     "| Open Web Application Security Project  | [OWASP](#Open-Web-Application-Security-Project-(OWASP))  |\n",
     "\n",
-    "### NIST FRAMEWORK \n",
+    "## NIST FRAMEWORK \n",
     "- NIST FRAMEWORK  [NIST](https://www.nist.gov/cyberframework) \n",
     "\n",
     "\n",
